--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,5 @@
 # API Configuration
-REACT_APP_API_URL=http://localhost:3001
+REACT_APP_API_URL=https://local-life.onrender.com
 
 # Admin Configuration
 REACT_APP_ADMIN_CODE=780523
