--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@ DATABASE_URL=postgresql://neondb_owner:npg_JcXhu4D5BpzS@ep-ancient-bird-a59vx2lc
 # Server Configuration
 PORT=3001
 NODE_ENV=development
-CORS_ORIGIN=http://localhost:3000
+CORS_ORIGIN=https://brilliant-zuccutto-6b7cc7.netlify.app/
 
 # Security Configuration
 ADMIN_CODE=780523
